--- a/Warhammer 40k Black Crusade/warhammer40k.html
+++ b/Warhammer 40k Black Crusade/warhammer40k.html
@@ -155,16 +155,26 @@
           <h3 class="small-caps" data-i18n="(inf)"></h3>
         </div>
       </div>
-      <div class="col grid border"><span class="text-center" name="attr_weapon skill"></span></div>
-      <div class="col grid border"><span class="text-center" name="attr_ballistic skill"></span></div>
-      <div class="col grid border"><span class="text-center" name="attr_strength"></span></div>
-      <div class="col grid border"><span class="text-center" name="attr_toughness"></span></div>
-      <div class="col grid border"><span class="text-center" name="attr_agility"></span></div>
-      <div class="col grid border"><span class="text-center" name="attr_intelligence"></span></div>
-      <div class="col grid border"><span class="text-center" name="attr_perception"></span></div>
-      <div class="col grid border"><span class="text-center" name="attr_willpower"></span></div>
-      <div class="col grid border"><span class="text-center" name="attr_fellowship"></span></div>
-      <div class="col grid border"><span class="text-center" name="attr_infamy"></span></div>
+      <input name="attr_weapon_skill_modifier" type="hidden" value="0"/>
+      <div class="col grid border"><span class="text-center" name="attr_weapon_skill"></span><span class="text-center" name="attr_weapon_skill_modifier"></span></div>
+      <input name="attr_ballistic_skill_modifier" type="hidden" value="0"/>
+      <div class="col grid border"><span class="text-center" name="attr_ballistic_skill"></span><span class="text-center" name="attr_ballistic_skill_modifier"></span></div>
+      <input name="attr_strength_modifier" type="hidden" value="0"/>
+      <div class="col grid border"><span class="text-center" name="attr_strength"></span><span class="text-center" name="attr_strength_modifier"></span></div>
+      <input name="attr_toughness_modifier" type="hidden" value="0"/>
+      <div class="col grid border"><span class="text-center" name="attr_toughness"></span><span class="text-center" name="attr_toughness_modifier"></span></div>
+      <input name="attr_agility_modifier" type="hidden" value="0"/>
+      <div class="col grid border"><span class="text-center" name="attr_agility"></span><span class="text-center" name="attr_agility_modifier"></span></div>
+      <input name="attr_intelligence_modifier" type="hidden" value="0"/>
+      <div class="col grid border"><span class="text-center" name="attr_intelligence"></span><span class="text-center" name="attr_intelligence_modifier"></span></div>
+      <input name="attr_perception_modifier" type="hidden" value="0"/>
+      <div class="col grid border"><span class="text-center" name="attr_perception"></span><span class="text-center" name="attr_perception_modifier"></span></div>
+      <input name="attr_willpower_modifier" type="hidden" value="0"/>
+      <div class="col grid border"><span class="text-center" name="attr_willpower"></span><span class="text-center" name="attr_willpower_modifier"></span></div>
+      <input name="attr_fellowship_modifier" type="hidden" value="0"/>
+      <div class="col grid border"><span class="text-center" name="attr_fellowship"></span><span class="text-center" name="attr_fellowship_modifier"></span></div>
+      <input name="attr_infamy_modifier" type="hidden" value="0"/>
+      <div class="col grid border"><span class="text-center" name="attr_infamy"></span><span class="text-center" name="attr_infamy_modifier"></span></div>
       <div class="rowx settings 10column">
         <h1 class="text-center" data-i18n="scores"></h1>
         <div class="col grid">
@@ -267,14 +277,14 @@
             </label>
           </div>
         </div>
-        <h1 class="text-center" data-i18n="modifier"></h1>
+        <h1 class="text-center" data-i18n="modifier bonus"></h1>
         <div class="col grid">
           <div class="rowx text-center">
             <h2 class="small-caps" data-i18n="weapon skill"></h2>
           </div>
           <div class="rowx">
-            <label data-i18n-title="weapon skill modifier">
-              <input name="attr_weapon_skill_modifier" title="@{weapon_skill_modifier}" type="number" value=""/>
+            <label data-i18n-title="weapon skill modifier bonus">
+              <input name="attr_weapon_skill_modifier_bonus" title="@{weapon_skill_modifier_bonus}" type="number" value=""/>
             </label>
           </div>
         </div>
@@ -283,8 +293,8 @@
             <h2 class="small-caps" data-i18n="ballistic skill"></h2>
           </div>
           <div class="rowx">
-            <label data-i18n-title="ballistic skill modifier">
-              <input name="attr_ballistic_skill_modifier" title="@{ballistic_skill_modifier}" type="number" value=""/>
+            <label data-i18n-title="ballistic skill modifier bonus">
+              <input name="attr_ballistic_skill_modifier_bonus" title="@{ballistic_skill_modifier_bonus}" type="number" value=""/>
             </label>
           </div>
         </div>
@@ -293,8 +303,8 @@
             <h2 class="small-caps" data-i18n="strength"></h2>
           </div>
           <div class="rowx">
-            <label data-i18n-title="strength modifier">
-              <input name="attr_strength_modifier" title="@{strength_modifier}" type="number" value=""/>
+            <label data-i18n-title="strength modifier bonus">
+              <input name="attr_strength_modifier_bonus" title="@{strength_modifier_bonus}" type="number" value=""/>
             </label>
           </div>
         </div>
@@ -303,8 +313,8 @@
             <h2 class="small-caps" data-i18n="toughness"></h2>
           </div>
           <div class="rowx">
-            <label data-i18n-title="toughness modifier">
-              <input name="attr_toughness_modifier" title="@{toughness_modifier}" type="number" value=""/>
+            <label data-i18n-title="toughness modifier bonus">
+              <input name="attr_toughness_modifier_bonus" title="@{toughness_modifier_bonus}" type="number" value=""/>
             </label>
           </div>
         </div>
@@ -313,8 +323,8 @@
             <h2 class="small-caps" data-i18n="agility"></h2>
           </div>
           <div class="rowx">
-            <label data-i18n-title="agility modifier">
-              <input name="attr_agility_modifier" title="@{agility_modifier}" type="number" value=""/>
+            <label data-i18n-title="agility modifier bonus">
+              <input name="attr_agility_modifier_bonus" title="@{agility_modifier_bonus}" type="number" value=""/>
             </label>
           </div>
         </div>
@@ -323,8 +333,8 @@
             <h2 class="small-caps" data-i18n="intelligence"></h2>
           </div>
           <div class="rowx">
-            <label data-i18n-title="intelligence modifier">
-              <input name="attr_intelligence_modifier" title="@{intelligence_modifier}" type="number" value=""/>
+            <label data-i18n-title="intelligence modifier bonus">
+              <input name="attr_intelligence_modifier_bonus" title="@{intelligence_modifier_bonus}" type="number" value=""/>
             </label>
           </div>
         </div>
@@ -333,8 +343,8 @@
             <h2 class="small-caps" data-i18n="perception"></h2>
           </div>
           <div class="rowx">
-            <label data-i18n-title="perception modifier">
-              <input name="attr_perception_modifier" title="@{perception_modifier}" type="number" value=""/>
+            <label data-i18n-title="perception modifier bonus">
+              <input name="attr_perception_modifier_bonus" title="@{perception_modifier_bonus}" type="number" value=""/>
             </label>
           </div>
         </div>
@@ -343,8 +353,8 @@
             <h2 class="small-caps" data-i18n="willpower"></h2>
           </div>
           <div class="rowx">
-            <label data-i18n-title="willpower modifier">
-              <input name="attr_willpower_modifier" title="@{willpower_modifier}" type="number" value=""/>
+            <label data-i18n-title="willpower modifier bonus">
+              <input name="attr_willpower_modifier_bonus" title="@{willpower_modifier_bonus}" type="number" value=""/>
             </label>
           </div>
         </div>
@@ -353,8 +363,8 @@
             <h2 class="small-caps" data-i18n="fellowship"></h2>
           </div>
           <div class="rowx">
-            <label data-i18n-title="fellowship modifier">
-              <input name="attr_fellowship_modifier" title="@{fellowship_modifier}" type="number" value=""/>
+            <label data-i18n-title="fellowship modifier bonus">
+              <input name="attr_fellowship_modifier_bonus" title="@{fellowship_modifier_bonus}" type="number" value=""/>
             </label>
           </div>
         </div>
@@ -363,8 +373,8 @@
             <h2 class="small-caps" data-i18n="infamy"></h2>
           </div>
           <div class="rowx">
-            <label data-i18n-title="infamy modifier">
-              <input name="attr_infamy_modifier" title="@{infamy_modifier}" type="number" value=""/>
+            <label data-i18n-title="infamy modifier bonus">
+              <input name="attr_infamy_modifier_bonus" title="@{infamy_modifier_bonus}" type="number" value=""/>
             </label>
           </div>
         </div>
@@ -1538,4 +1548,55 @@
     </div>
   </rolltemplate>
 </div>
-<script type="text/worker"></script>
+<script type="text/worker">
+  const globalAttributesByCatagory = {
+	characteristics: ['weapon skill', 'ballistic skill', 'strength', 'toughness', 'agility', 'intelligence', 'perception', 'willpower', 'fellowship', 'infamy']
+}
+
+//module.exports = globalAttributesByCatagory;
+
+  // === SHARED FUNCTIONS
+const setAttributes = (update, silent) => { 
+	silent === true ? setAttrs(update, {silent:true}) : setAttrs(update); 
+};
+
+globalAttributesByCatagory.characteristics.forEach(characteristic => {
+	on(`change:${characteristic} change:${characteristic}_modifier_bonus`, () => {
+		getAttrs([`${characteristic}`, `${characteristic}_modifier_bonus`], values => {
+			values = {score: values[`${characteristic}`], bonus: values[`${characteristic}_modifier_bonus`]}
+			setAttributes({[`${characteristic}_modifier`]: Characteristics.calculateAttributes(values)});
+		})
+	});
+})
+
+  
+const Helpers = {
+	parseIntegers(numbers) {
+		for (let [key, value] of Object.entries(numbers)) {
+		    numbers[key] = parseInt(value) || 0;
+		}
+		return numbers	
+	},
+	sumIntegers: numbers => numbers.reduce((a,b) => a + b, 0),
+	convertInteger: string => parseInt(string) || 0,
+}
+
+//module.exports = Helpers;
+
+  
+//const Helpers = require('./Helpers');
+
+const Characteristics = {
+	calculateAttributes: values => {
+		const integers = Helpers.parseIntegers(values)
+		const modifier = Characteristics.divideByTen(integers.score) || 0
+		const bonus = integers.bonus || 0
+
+		return Helpers.sumIntegers([modifier, bonus])
+	},
+	divideByTen: score => Math.floor(score/10)
+}
+
+//module.exports = Characteristics;
+
+</script>
